@@ -104,7 +104,7 @@ public class Thunder implements Source.Extractor {
             if (torrent && url.startsWith("http")) Download.create(url, taskId.getSaveFile()).get();
             if (!torrent) waitDone(taskId);
             try {
-                return XLTaskHelper.get().getTorrentInfo(taskId.getSaveFile()).getMedias().stream().map(this::create).collect(Collectors.toList());
+                return XLTaskHelper.get().getTorrentInfo(taskId.getSaveFile()).getMedias().stream().map(this::create).toList();
             } finally {
                 XLTaskHelper.get().stopTask(taskId);
             }
